--- a/website/templates/auth/verify_email_page.jinja2
+++ b/website/templates/auth/verify_email_page.jinja2
@@ -34,8 +34,8 @@
                     <form action="{{ url_for('verify_email.resend_verification_email') }}" method="post" class="mt-3">
                         <div class="input-group mb-3">
                             <input type="email" name="email" value="{{ email }}" class="form-control form-control-lg" placeholder="Email" required>
-                            <button type="submit" class="btn btn-primary btn-lg">
-                                Resend Verification Email
+                            <button type="submit" class="btn btn-primary">
+                                Resend Link
                             </button>
                         </div>
                     </form>
