--- a/website/templates/user/view_events.jinja2
+++ b/website/templates/user/view_events.jinja2
@@ -29,7 +29,7 @@
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" id="ongoing-tab" data-bs-toggle="tab" data-bs-target="#ongoing"
                             type="button" role="tab" aria-controls="ongoing" aria-selected="false">
-                                <i class="fa-solid fa-hourglass-half"></i> Ongoing Events
+                                <i class="fa-solid fa-hourglass-half"></i> Ongoing Event
                             </button>
                         </li>
                         <li class="nav-item" role="presentation">
@@ -71,7 +71,7 @@
                         <!-- Ongoing Events Tab -->
                         <div class="tab-pane fade" id="ongoing" role="tabpanel" aria-labelledby="ongoing-tab">
                             <div class="section-header">
-                                <h2 class="fs-3"><i class="fa-solid fa-hourglass-half text-success"></i> Ongoing Events</h2>
+                                <h2 class="fs-3"><i class="fa-solid fa-hourglass-half text-success"></i> Ongoing Event</h2>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-hover" id="ongoing_sched_table">
