--- a/website/templates/public/event_preview.jinja2
+++ b/website/templates/public/event_preview.jinja2
@@ -11,7 +11,7 @@
 <div class="event-container">
     <div class="event-header">
         <h2><i class="fas fa-calendar-alt"></i> Event Preview</h2>
-        <p class="text-muted">View upcoming and ongoing events</p>
+        <p class="text-muted">View upcoming and ongoing event</p>
     </div>
 
     <ul class="nav nav-tabs" id="eventTabs">
@@ -22,7 +22,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" href="#ongoing-tab">
-                <i class="fas fa-hourglass-half"></i> Ongoing Events
+                <i class="fas fa-hourglass-half"></i> Ongoing Event
             </a>
         </li>
     </ul>
